--- a/sources/css/main.css
+++ b/sources/css/main.css
@@ -1,8 +1,8 @@
 @font-face
 {
-	font-weight: normal;
-	font-style: normal;
 	font-family: "font-awesome";
+	font-style: normal;
+	font-weight: normal;
 	src: url("font-awesome/fonts/fontawesome-webfont.ttf");
 }
 
@@ -11,85 +11,86 @@ body
 	background-color : black;
 }
 #canvas{
-	background-image: url("../images/decors/canvasMine.jpg");
-	background-size: cover;
+	background-image: url("../images/decors/mine.jpg");
 	background-repeat: no-repeat;
-	/*display	: inline-block;*/
+	background-size: cover;
+	/* display	: inline-block; */
+	height	: 600px;
 	margin	: 0 auto;
 	width	: 900px;
-	height	: 600px;
 }
 
 
 /*gui TEARS*/
 #containerTearsGUI{
+	background-color	: white;
 	display				: inline-block;
+	padding     		: 10px;
 	position			: absolute;
 	right				: 20.5rem;
 	top					: 0.7rem;
 	width				: 7rem;
-	padding     		: 10px;
-	background-color	: white;
 }
 
 .tear{
-	float               : right;
-	display				: inline-block;
 	background-color	: purple;
-	width				: 2rem;
+	display				: inline-block;
+	float               : right;
 	height				: 2rem;
 	vertical-align		: middle;
+	width				: 2rem;
 }
 
 #gameOver{
-	display				: none;
 	background-color	: red;
+	border				: 2px solid black;
 	border-radius		: 15px;
-	width				: 719px;
+	display				: none;
+	font-size			: 45px;
+	height				: 512px;
 	left				: 100px;
 	position			: absolute;
-	top					: 50px;
-	height				: 512px;
 	text-align			: center;
-	font-size			: 45px;
-	border				: 2px solid black;
+	top					: 50px;
+	width				: 719px;
 }
 
 #controles{
-	display				: inline-block;
-	position			: absolute;
-	right				: 3.5rem;
-	top					: 6.0rem;
-	width				: 24rem;
-	height				: 6rem;
-	font-size			: 20px;
-	padding			    : 10px;
-	background-color	: grey;
-	text-align: center;
-	font-weight			: bold;
+	background-color: grey;
+	display         : inline-block;
+	font-size       : 20px;
+	font-weight     : bold;
+	height          : 6rem;
+	padding         : 10px;
+	position        : absolute;
+	right           : 3.5rem;
+	text-align      : center;
+	top             : 6.0rem;
+	width           : 24rem;
 }
 
 #notif{
-	font-family     : "font-awesome";
 	background      : #E0C5DD;
-	position        : absolute;
-	left            : 15rem;
-	top             : 1rem;
-	width           : 30rem;
-	text-align      : center;
-	height          : 20rem;
-	padding         : 1rem;
-	border-radius   : 2rem;
-	vertical-align  : middle;
 	background-image: url("../images/decors/wallbitcoin.jpg");
 	background-size :cover; 
 	border          : 1px rgb(252, 126, 126) solid;
+	border-radius   : 2rem;
+	font-family     : "font-awesome";
+	height          : 20rem;
+	/*left          : 15rem;*/
+	left            : 30rem;
+	padding         : 1rem;
+	position        : absolute;
+	text-align      : center;
+	top             : 1rem;
+	vertical-align  : middle;
+	width           : 30rem;
 }
 #container{
-	padding: 2rem;
+	background-color: rgba(200,200,200,0.9);
 	border          : 1px rgb(255, 255, 255) solid;
 	border-radius   : 2rem;
-	background-color: rgba(200,200,200,0.9);
+	padding         : 2rem;
 }
 .name{
 	font-weight: bold;
@@ -101,32 +102,38 @@ body
 }
 .title{
 	font-size: 2rem;
-	margin   : 0
+	margin   : 0;
 }
 .explication{
+	font-size     :1.0rem;
+	margin-top    : 2rem;
 	position      : relative;
 	vertical-align: middle;
-	margin-top    : 2rem;
-	font-size     :1.0rem;
 }
 
-#start{
-position             : relative;
-border               : 0px;
--moz-border-radius   : 7px;
--webkit-border-radius: 7px;
-border-radius        : 7px;
-margin               : 0rem;
-top                  : 0rem;
-background-image     : url('../images/decors/axebtn.png');
-background-size      : contain;
-width                : 7rem;
-height               : 7rem;
-background-color     : transparent;
-background-repeat    : no-repeat;
-font-weight          : bolder;
-font-size            : 1.2rem;
-color                : white;
-text-align           : center;
-padding-top          : 4.2rem;
+.buttonInit{
+	background-color      : transparent;
+	background-image      : url('../images/decors/axebtn.png');
+	background-repeat     : no-repeat;
+	background-size       : contain;
+	border                : 0px;
+	-moz-border-radius    : 7px;
+	-webkit-border-radius : 7px;
+	border-radius         : 7px;
+	color                 : white;
+	color                 : white;
+	font-size             : 1.2rem;
+	font-weight           : bolder;
+	height                : 7rem;
+	margin                : 0rem;
+	padding-top           : 4.2rem;
+	position              : relative;
+	text-align            : center;
+	top                   : 0rem;
+	width                 : 7rem;
+}
+audio{
+
+	left    : 62rem;
+	top     : 9rem;
 }
